--- a/app/index-async.html
+++ b/app/index-async.html
@@ -31,7 +31,8 @@
       'bower_components/angular/angular.js',
       'bower_components/angular-route/angular-route.js',
       'app.js',
-      'view1/view1.js',
+      'services.js',,
+      'scenarios/scenarios.js',
       'view2/view2.js',
       'components/version/version.js',
       'components/version/version-directive.js',
@@ -41,18 +42,12 @@
       angular.bootstrap(document, ['lcaApp']);
     });
   </script>
-  <title>My AngularJS App</title>
+  <title>LCA App</title>
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-cloak>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
 
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
 
 </body>
 </html>
