--- a/app/scenarios/scenarios.html
+++ b/app/scenarios/scenarios.html
@@ -1,6 +1,6 @@
 <!-- Partial html for scenarios view -->
-<body ng-app="lcaApp">
-<table>
+<h4>Scenarios</h4>
+<table class="table">
     <thead>
     <tr><th>Name</th><th>Activity Level</th><th>Top Level Fragment</th></tr>
     </thead>
@@ -8,8 +8,7 @@
     <tr ng-repeat="scenario in scenarios">
         <td>{{scenario.name}}</td>
         <td>{{scenario.activityLevel}}</td>
-        <td>{{scenario.topLevelFragmentID}}></td>
+        <td>{{scenario.topLevelFragmentID}}</td>
     </tr>
     </tbody>
 </table>
-</body>
