Vis: Get top level fragment name from web api

--- a/app/scenarios/scenarios.html
+++ b/app/scenarios/scenarios.html
@@ -8,7 +8,7 @@
     <tr ng-repeat="scenario in scenarios">
         <td>{{scenario.name}}</td>
         <td>{{scenario.activityLevel}}</td>
-        <td>{{scenario.topLevelFragmentID}}</td>
+        <td>{{scenario.fragment.name}}</td>
     </tr>
     </tbody>
 </table>
