--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <title>LCA App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-app="lcaApp">
@@ -22,7 +22,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="app.js"></script>
-  <script src="services.js"></script>
+  <script src="services/resources.js"></script>
   <script src="scenarios/scenarios.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
