--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/d3/d3.js"></script>
   <script src="app.js"></script>
   <script src="services/resources.js"></script>
   <script src="scenarios/scenarios.js"></script>
