--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="app.js"></script>
+  <script src="directives/sankeyDiagram.js"></script>
   <script src="services/resources.js"></script>
+  <script src="services/sankey.js"></script>
   <script src="scenarios/scenarios.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
