Vis: Link from scenario to fragment-sankey, get resources

--- a/app/index.html
+++ b/app/index.html
@@ -23,11 +23,12 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="app.js"></script>
+  <script src="components/sankey/sankey.js"></script>
   <script src="components/sankey/sankey-directive.js"></script>
   <script src="components/resources/resource-service.js"></script>
   <script src="components/sankey/sankey-service.js"></script>
   <script src="scenarios/scenarios.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="fragment-sankey/fragment-sankey.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
