--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body ng-app="lcaApp">
@@ -22,6 +23,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/d3/d3.js"></script>
+  <script src="bower_components/ngprogress/build/ngProgress.js"></script>
   <script src="app.js"></script>
   <script src="components/sankey/sankey.js"></script>
   <script src="components/sankey/sankey-directive.js"></script>
