--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/colorbrewer/colorbrewer.js"></script>
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/ngprogress/build/ngProgress.js"></script>
   <script src="app.js"></script>
