--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
   <title>LCA App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">-->
+  <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
   <link rel="stylesheet" href="components/sankey/sankey.css">
   <link rel="stylesheet" href="app.css">
 </head>
@@ -27,6 +28,7 @@
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/spin.js/spin.js"></script>
   <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+  <script src="bower_components/Array.prototype.find/index.js"></script>
   <script src="app.js"></script>
   <script src="components/idmap/idmap-service.js"></script>
   <script src="components/sankey/sankey.js"></script>
