--- a/app/index.html
+++ b/app/index.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="lcaApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="lcaApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="lcaApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="lcaApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html lang="en" ng-app="lcaApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html lang="en" ng-app="lcaApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" ng-app="lcaApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" ng-app="lcaApp" class="no-js"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>LCA App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">-->
-  <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
-  <link rel="stylesheet" href="components/sankey/sankey.css">
-  <link rel="stylesheet" href="app.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>LCA App</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">-->
+    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
+    <link rel="stylesheet" href="components/sankey/sankey.css">
+    <link rel="stylesheet" href="app.css">
+
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/colorbrewer/colorbrewer.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+    <script src="bower_components/array.prototype.find/index.js"></script>
+    <script src="app.js"></script>
+    <script src="components/idmap/idmap-service.js"></script>
+    <script src="components/sankey/sankey.js"></script>
+    <script src="components/sankey/sankey-directive.js"></script>
+    <script src="components/resources/resource-service.js"></script>
+    <script src="components/sankey/sankey-service.js"></script>
+    <script src="scenarios/scenarios.js"></script>
+    <script src="fragment-sankey/fragment-sankey.js"></script>
+    <script src="components/version/version.js"></script>
+    <script src="components/version/version-directive.js"></script>
+    <script src="components/version/interpolate-filter.js"></script>
+
 </head>
 <body ng-app="lcaApp">
-    <h3>Used Oil Life Cycle Assessment</h3>
-    <ng-view></ng-view>
-    <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-lca"></span>
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/colorbrewer/colorbrewer.js"></script>
-  <script src="bower_components/d3/d3.js"></script>
-  <script src="bower_components/spin.js/spin.js"></script>
-  <script src="bower_components/angular-spinner/angular-spinner.js"></script>
-  <script src="bower_components/Array.prototype.find/index.js"></script>
-  <script src="app.js"></script>
-  <script src="components/idmap/idmap-service.js"></script>
-  <script src="components/sankey/sankey.js"></script>
-  <script src="components/sankey/sankey-directive.js"></script>
-  <script src="components/resources/resource-service.js"></script>
-  <script src="components/sankey/sankey-service.js"></script>
-  <script src="scenarios/scenarios.js"></script>
-  <script src="fragment-sankey/fragment-sankey.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+
+<h3>Used Oil Life Cycle Assessment</h3>
+<ng-view></ng-view>
+<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-lca"></span>
+
 </body>
 </html>
