Vis: Node tooltip (#43)

--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,11 @@
     <title>LCA App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">-->
-    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <!--<link rel="stylesheet" href="bower_components/normalize.css/normalize.css">-->
     <link rel="stylesheet" href="components/sankey/sankey.css">
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="fragment-sankey/d3-tip.css">
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
@@ -24,10 +25,12 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/colorbrewer/colorbrewer.js"></script>
     <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
     <script src="app.js"></script>
+    <script src="components/d3-tip/tip-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
     <script src="components/sankey/sankey.js"></script>
     <script src="components/sankey/sankey-directive.js"></script>
