--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,6 +1,10 @@
 <h4>Fragment Flow Diagram</h4>
 <fieldset>
     <p>
+       <label>Scenario: </label>
+       <span>{{scenario.name}}</span>
+    </p>
+    <p>
         <label>Flow Property Type
             <select ng-model="selectedFlowProperty" ng-options="fp.name for fp in flowProperties"
                     ng-change="onFlowPropertyChange()">
