--- a/app/scenarios/scenarios.html
+++ b/app/scenarios/scenarios.html
@@ -1,5 +1,4 @@
 <!-- Partial html for scenarios view -->
-<h4>Scenarios</h4>
 <table class="table">
     <thead>
     <tr><th>Name</th><th>Activity Level</th><th>Top Level Fragment</th></tr>
@@ -8,7 +7,8 @@
     <tr ng-repeat="scenario in scenarios">
         <td>{{scenario.name}}</td>
         <td>{{scenario.activityLevel}}</td>
-        <td><a href="#/fragment-sankey/{{scenario.scenarioID}}/{{scenario.topLevelFragmentID}}">{{scenario.fragment.name}}</a></td>
+        <td><a ui-sref=".fragment({scenarioID: scenario.scenarioID,
+        fragmentID: scenario.topLevelFragmentID})">{{scenario.fragment.name}}</a></td>
     </tr>
     </tbody>
 </table>
