Vis: Use bootstrap container class and form element (#48)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,5 +1,5 @@
-<h4>Fragment Flow Diagram</h4>
-<fieldset>
+<form>
+<legend>Fragment Flow Diagram</legend>
     <p>
        <label>Scenario: </label>
        <span>{{scenario.name}}</span>
@@ -13,7 +13,7 @@
         <label id="unitLabel">Reference Unit:</label>
         <span id="refUnitName">{{selectedFlowProperty.referenceUnit}}</span>
     </p>
-</fieldset>
+</form>
 <!--suppress HtmlUnknownTag -->
 <sankey-diagram graph="graph" color="color"></sankey-diagram>
 
