--- a/app/index.html
+++ b/app/index.html
@@ -47,10 +47,11 @@
 
 </head>
 <body ng-app="lcaApp">
+<div class="container">
 <h3>Used Oil Life Cycle Assessment</h3>
 <div ncy-breadcrumb></div>
 <div ui-view></div>
 <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-lca"></span>
-
+</div>
 </body>
 </html>
