Vis: Sankey diagram cosmetics

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,8 +1,11 @@
 <form>
-<legend>Fragment Flow Diagram</legend>
     <p>
        <label>Scenario: </label>
        <span>{{scenario.name}}</span>
+    </p>
+    <p>
+        <label>Fragment: </label>
+        <span>{{fragment.name}}</span>
     </p>
     <p>
         <label>Flow Property Type
