Vis: Sankey navigation without breadcrumbs (#42)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -18,5 +18,5 @@
     </p>
 </form>
 <!--suppress HtmlUnknownTag -->
-<sankey-diagram graph="graph" color="color"></sankey-diagram>
+<sankey-diagram graph="graph" color="color" selected-node="selectedNode"></sankey-diagram>
 
