--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
     <!--<script src="bower_components/ng-breadcrumbs/dist/ng-breadcrumbs.js"></script>-->
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-breadcrumb/release/angular-breadcrumb.js"></script>
     <script src="app.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
