--- a/app/scenarios/scenarios.html
+++ b/app/scenarios/scenarios.html
@@ -1,4 +1,5 @@
 <!-- Partial html for scenarios view -->
+<alert ng-show="alert" type="{{alert.type}}">{{alert.msg}}</alert>
 <table class="table">
     <thead>
     <tr><th>Name</th><th>Activity Level</th><th>Top Level Fragment</th></tr>
