--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -1,32 +1,28 @@
 <!-- Partial html for process LCIA view -->
-<div class="row">
-    <form>
-        <p>
-            <label for="scenario-select">
-                Scenario
-            </label>
-            <select id="scenario-select" ng-model="selectedScenario"
-                    ng-options="s.name for s in scenarios"
-                    ng-change="onScenarioChange()">
-            </select>
-        </p>
-        <p>
-            <label for="process-select">Process</label>
-            <select id="process-select" ng-model="selectedProcess" ng-options="p.name for p in processes"
-                    ng-change="onProcessChange()">
-            </select>
-        </p>
-    </form>
-</div>
+<alert ng-show="alert" type="{{alert.type}}">{{alert.msg}}</alert>
 <div class="row">
     <div class="col-md-8">
-        <div class="lcia-container">
-            <!--suppress HtmlUnknownTag -->
-            <lcia-diagram results="results" flows="elementaryFlows"></lcia-diagram>
-        </div>
+        <form>
+            <p>
+                <label for="scenario-select">
+                    Scenario
+                </label>
+                <select id="scenario-select" ng-model="selectedScenario"
+                        ng-options="s.name for s in scenarios"
+                        ng-change="onScenarioChange()">
+                </select>
+            </p>
+
+            <p>
+                <label for="process-select">Process</label>
+                <select id="process-select" ng-model="selectedProcess" ng-options="p.name for p in processes"
+                        ng-change="onProcessChange()">
+                </select>
+            </p>
+        </form>
     </div>
     <div class="col-md-4">
-        <div class="flow-container" ng-show="mouseOverNode">
+        <div class="flow-container" ng-show="selectedProcess">
             <label>Input Flows</label>
             <table class="table">
                 <thead>
@@ -63,6 +59,13 @@
             </table>
         </div>
     </div>
+</div>
+<div class="row">
+    <div class="lcia-container">
+        <!--suppress HtmlUnknownTag -->
+        <lcia-bar-chart results="results" flows="elementaryFlows"></lcia-bar-chart>
+    </div>
+
 </div>
 
 
