Vis: Process LCIA view adjustments

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -15,6 +15,10 @@
         </span>
             <span>{{fragment.name}}</span>
         </p>
+        <p>
+            <label>Activity Level: </label>
+            <span>{{fragment.activityLevel}}</span>
+        </p>
 
         <p>
             <label for="flow-prop-select">Flow Property Type </label>
