--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -15,6 +15,8 @@
                 <dl class="dl-horizontal">
                     <dt>Method</dt>
                     <dd>{{method.name}}</dd>
+                    <dt>Total Impact</dt>
+                    <dd>{{lciaResults[method.lciaMethodID].cumulativeResult}}</dd>
                 </dl>
             </li>
         </ul>
