Vis: LCIA bar chart directive (WIP, #64)

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <!--<link rel="stylesheet" href="bower_components/normalize.css/normalize.css">-->
+    <link rel="stylesheet" href="components/lcia-bar-chart/lcia-bar-chart.css">
     <link rel="stylesheet" href="components/sankey/sankey.css">
     <link rel="stylesheet" href="app.css">
 
@@ -33,8 +34,10 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-breadcrumb/release/angular-breadcrumb.js"></script>
     <script src="app.js"></script>
+    <script src="components/color-code/color-code.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
+    <script src="components/lcia-bar-chart/lcia-bar-directive.js"></script>
     <script src="components/sankey/sankey.js"></script>
     <script src="components/sankey/sankey-directive.js"></script>
     <script src="components/resources/resource-service.js"></script>
