--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -12,16 +12,23 @@
         </dl>
         <ul class="list-unstyled">
             <li ng-repeat="method in lciaMethods" class="lcia-method">
-                <dl class="dl-horizontal">
-                    <dt>Method</dt>
-                    <dd>{{method.name}}</dd>
-                    <dt>Flow Property</dt>
-                    <dd>{{method.referenceFlowProperty.name}}</dd>
-                    <dt>Total Impact</dt>
-                    <dd>{{lciaResults[method.lciaMethodID].cumulativeResult | number}} {{method.referenceFlowProperty.referenceUnit}}</dd>
-                </dl>
-                <div class="lcia-bar-container">
-                    <lcia-bar-chart lcia="lciaResults[method.lciaMethodID]" flows="elementaryFlows" activity="activityLevel"></lcia-bar-chart>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <dt>LCIA Method</dt>
+                        <dd>{{method.name}}</dd>
+                    </div>
+                    <div class="panel-body">
+                        <dl class="dl-horizontal">
+                            <dt>Cumulative Result</dt>
+                            <dd>{{lciaResults[method.lciaMethodID].cumulativeResult | number}} {{method.referenceFlowProperty.referenceUnit}}
+                            </dd>
+                            <dd>{{method.referenceFlowProperty.name}}</dd>
+                        </dl>
+                        <div class="lcia-bar-container">
+                            <lcia-bar-chart lcia="lciaResults[method.lciaMethodID]" flows="elementaryFlows"
+                                            activity="activityLevel"></lcia-bar-chart>
+                        </div>
+                    </div>
                 </div>
             </li>
         </ul>
