Vis: Move Process LCIA result manipulation to controller (#63)

--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -25,8 +25,7 @@
                             <dd>{{method.referenceFlowProperty.name}}</dd>
                         </dl>
                         <div class="lcia-bar-container">
-                            <lcia-bar-chart lcia="lciaResults[method.lciaMethodID]" flows="elementaryFlows"
-                                            activity="activityLevel"></lcia-bar-chart>
+                            <lcia-bar-chart lcia="lciaResults[method.lciaMethodID]" flows="elementaryFlows"></lcia-bar-chart>
                         </div>
                     </div>
                 </div>
