--- a/app/index.html
+++ b/app/index.html
@@ -10,29 +10,26 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LCA App</title>
+    <title>Used Oil LCA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <!--<link rel="stylesheet" href="bower_components/normalize.css/normalize.css">-->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="components/lcia-bar-chart/lcia-bar-chart.css">
     <link rel="stylesheet" href="components/sankey/sankey.css">
     <link rel="stylesheet" href="app.css">
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
-    <!--<script src="bower_components/angular-route/angular-route.js"></script>-->
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/colorbrewer/colorbrewer.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/d3/d3.min.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
-    <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+    <script src="bower_components/angular-spinner/angular-spinner.min.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
-    <!--<script src="bower_components/ng-breadcrumbs/dist/ng-breadcrumbs.js"></script>-->
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="bower_components/angular-breadcrumb/release/angular-breadcrumb.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/angular-breadcrumb/release/angular-breadcrumb.min.js"></script>
     <script src="app.js"></script>
     <script src="components/color-code/color-code.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
