Vis: Create new modules for Fragment LCIA view (#86)

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="components/resources/resource-service.js"></script>
     <script src="components/sankey/sankey-service.js"></script>
     <script src="scenarios/scenarios.js"></script>
+    <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
     <script src="components/version/version.js"></script>
