Vis: Add set service, use to collect fragmentFlowIDs from LCIA results (#86)

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="components/sankey/sankey-directive.js"></script>
     <script src="components/resources/resource-service.js"></script>
     <script src="components/sankey/sankey-service.js"></script>
+    <script src="components/set/set-service.js"></script>
     <script src="scenarios/scenarios.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
