--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="components/color-code/color-code.js"></script>
     <script src="components/d3-tip/tip-service.js"></script>
     <script src="components/idmap/idmap-service.js"></script>
+    <script src="components/format/format.js"></script>
     <script src="components/lcia-bar-chart/lcia-bar-directive.js"></script>
     <script src="components/resources/resource-service.js"></script>
     <script src="components/sankey/sankey.js"></script>
