--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="components/lcia-bar-chart/lcia-bar-chart.css">
     <link rel="stylesheet" href="components/sankey/sankey.css">
+    <link rel="stylesheet" href="components/waterfall/waterfall-chart.css">
     <link rel="stylesheet" href="app.css">
 
     <script src="bower_components/angular/angular.min.js"></script>
