Vis: Waterfall y axis (#86)

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -7,7 +7,7 @@
                 <div ng-repeat="scenario in scenarios" class="row">
                     <h6 class="text-center">{{scenario.name}}</h6>
                     <div class="lcia-bar-container">
-                        <waterfall-chart service="waterfalls[method.lciaMethodID]" index="$index" color="colors[method.lciaMethodID]"></waterfall-chart>
+                        <waterfall-chart service="waterfalls[method.lciaMethodID]" index="$index" color="colors[method.lciaMethodID]" y-axis-width="110"></waterfall-chart>
                     </div>
                 </div>
             </div>
